# asyncroscopy-agent-version

./: .gitignore  LICENSE  README.md  pyproject.toml  tango_database.db
.github/workflows/: test.yaml
asyncroscopy/: Microscope.py  ThermoDigitalTwin.py  ThermoMicroscope.py
asyncroscopy/clients/: notebook_client.py
asyncroscopy/detectors/: HAADF.py
asyncroscopy/hardware/: CORRECTOR.py
asyncroscopy/servers/: AS_server.py  AS_server_AtomBlastTwin.py  AS_server_SimAtomRes.py  AS_server_SimAu.py  AS_server_twin.py  Ceos_server_twin.py  Preacquired_AS_server.py
asyncroscopy/servers/protocols/: central_server.py  execution_protocol.py  utils.py
asyncroscopy/smart_proxy/: smart_proxy.py  smart_proxy2.py  smart_proxy3.py
docs/: add_detector.md  dev_guide.md  modify_microscope.md  upcoming_changes.md
notebooks/: 1_Aberrations.ipynb  1_Client_tutorial.ipynb  2_Client_AS.ipynb  4_Digital_Twin_Image.ipynb  5_Spectroscopy_EDS.ipynb  6_Sample_map.ipynb  7_Digital_Twin_EDS.ipynb  Drift.ipynb
tests/: conftest.py  test_SCAN.py  test_digital_twin.py  test_thermo_microscope.py
