[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncroscopy"
version = "0.0.1"
description = "Async microscopy library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "sidpy",
    "SciFiReaders",
    "numba",
    "twisted"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["asyncroscopy*"]
